margin added to avoid overlap of navbar and slider

--- a/src/component/Slider/Slider.module.css
+++ b/src/component/Slider/Slider.module.css
@@ -1,16 +1,23 @@
 .Carousel{
-    height: 450px;
+    height: 500px;
+    margin-top:50px;
 }
 
 .FullSize {
     height: 100vh !important;
+    
 }
 .Dark_overlay{
-    position: absolute;
+   /* position: absolute;*/
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 75%;
     background:rgba(41, 41, 41, 0.7);
     opacity: 0.7;
+    
 }
+
+/*.coursel_reduction{
+    padding-top: 4000px; 
+}*/
